--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "element-plus": "^2.3.12",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
+    "pinia": "^2.1.6",
     "unplugin-icons": "^0.16.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
